# quanta-flow

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
core/: __init__.py  limiter.py
examples/: minimal.py
math/: math_proofs.md
sim/: __init__.py  run_sim.py
tests/: __init__.py  test_properties.py  test_witness.py
